--- a/setup.cfg
+++ b/setup.cfg
@@ -1,1 +1,12 @@
 #setup.cfg
+[aliases]
+test=pytest
+
+[tool:pytest]
+filterwarnings =
+    always
+    ignore::DeprecationWarning:alembic[.*]
+norecursedirs = .*, CVS, _darcs, {arch}, *.egg, venv
+
+
+
