--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
-#requirements
+appdirs==1.4.41
+ipython==7.17.0
+nltk==3.5
+numpy==1.18.4
+pandas==1.2.2
+pipenv==11.9.00
+pyparsing==2.4.7
+pytest==6.2.2
+python-apt==2.1.3+ubuntu1.3
+python-dateutil==2.8.1
+pytz==2020.1
+PyYAML==5.3.1
+regex==2021.4.4
+requests==2.23.0
+virtualenv==20.0.29+ds
+virtualenv-clone==0.3.0
+
